dev/registry-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: registry
  namespace: dev-registry
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`registry.codecsrayo.com`)
      kind: Rule
      services:
        - name: registry
          port: 5000
  tls:
    certResolver: netlify
